Version <release> released on <releaseDate>

Enhancements
- Developer documentation update
- New DHCP fingerprints for Cisco and Nortel IP Phones and Cisco Small 
  Business switch
- Improved test suite
- Miscellaneous code cleanup (#1165)
- Generated configuration files are now in var/... (#1014)
- pid files are now in var/run/

--------------------------------------------------------------------------------
Version 2.0.1 released on 2011-01-26

New Hardware Support
- Xirrus WiFi Arrays support (feature sponsored by the University of Mary 
  Hardin-Baylor) 
- Broaden Meru Controllers support
- Extricom EXSW Wireless Switches (Controllers) support

Enhancements
- Minor improvement to command-line and Web Admin help
- Improvements to SSID lookups
- Cisco WiSM and WLC SSID now recorded (#994)

Bug fixes
- Fixed pfcmd initiated VLAN re-evaluation (#1160)
- pfdhcplistener is better at updating node IP information (#1149)
- Fixed dot11Deauthentication traps issues with pfsetvlan (#1157)
- Add missing variable in snort.conf template (#1138)
- Fixed authorized MAC method in Cisco Catalyst 2960 (#987)
- Improved error handling in pfdhcplistener (#1150)
- Fixed problems with configurator.pl generating erroneous configuration (#1148)
- installer.pl now warns on empty MySQL root password (#1146)
- Fixed node view database queries that were reporting wrong values under 
  unknown circumstances (#1162)
- Removed some unnecessary warnings (#1065)

--------------------------------------------------------------------------------
Version 2.0.0 released on 2010-12-14

New Hardware Support
- SMC TigerStack 6128 L2 support in Port Security (feature sponsored by Seattle
  Pacific University)
- HP ProCurve MSM710 Mobility Controller
- Meru Networks MC3000 Wireless Controller
- Juniper EX Series in MAC RADIUS (Juniper's MAC Authentication)

New Features
- Simplification of the Wireless, Wired 802.1X and Wired MAC Authentication